# Text-to-SQL-AI-agent

./: .env.example  .gitignore  .python-version  CONTRIBUTING.md  README.md  agent.py  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: baseline_audit.md  baseline_deps.txt
eval/: benchmark.json  eval_app.py
scripts/: build_db.py  build_schema.py
src/agent/: __init__.py  graph.py  routing.py  state.py
src/agent/nodes/: __init__.py  classify.py  execute.py  generate.py  plan.py  reformulate.py  summarize.py
src/connectors/: __init__.py  base.py  csv_connector.py  factory.py  mysql.py  postgresql.py  sqlite.py
src/llm/: factory.py  tracker.py
src/prompts/: __init__.py  few_shot.py  system_prompts.py
src/schema/: embedder.py  loader.py
tests/: conftest.py
tests/integration/: test_graph.py
tests/unit/: test_connectors.py  test_llm_factory.py  test_routing.py  test_schema_embedder.py  test_state.py
tests/unit/test_nodes/: test_execute.py  test_generate.py
